# cmb

./: .gitignore  CMakeLists.txt  README.md
cmake_cmb/Ninja_clang-cl/Debug/: cmake-build.bat  cmake-generate.bat  cmake-run.bat
include/: cmb.h  cmb_utils.h
src/: cmb.c  cmb_utils.c  main.c
